--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>testing</artifactId>
 	<version>1.0.0</version>
 	<name>testing</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Software Testing</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -32,12 +32,6 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.stripe</groupId>
-			<artifactId>stripe-java</artifactId>
-			<version>19.2.0</version>
 		</dependency>
 
 		<dependency>
